fixed tota11y contrast errors

--- a/css/extra.css
+++ b/css/extra.css
@@ -1,3 +1,4 @@
+
 div[role=main] a {
   text-decoration:none;
   border-bottom: 2px solid #b4e7f8;
@@ -6,6 +7,34 @@ div[role=main] a {
   transition: background 0.1s cubic-bezier(.33,.66,.66,1);
 }
 
-a:hover {
+div[role=main] a:hover {
   background: #b4e7f8;
+}
+
+span.caption-text {
+  color: #999999;
+}
+
+.wy-menu-vertical li.current a {
+  color: #656565;
+}
+.wy-table-secondary {
+  color: #656565;
+}
+
+.wy-table-tertiary {
+  color: #656565;
+}
+
+a {
+  color: #0e7bb6;
+}
+
+code,
+.rst-content tt {
+  color: #e13009;
+}
+
+footer {
+  color: #404040;
 }
